Pushing new pictures, and some rewritten parts

--- a/About.html
+++ b/About.html
@@ -22,8 +22,8 @@
     <!-- About content section -->
     <section class="About">
         <h2 class="About-header"> About Henning</h2>
-        <p>Henning Unstad (2003) is working with photography, programming, and video editing.</p>
-        <p>He is based in Norway and grew up in a small town in the Lofoten islands.</p>
+        <p>Henning Unstad (b. 2003) is working with photography, programming, and video editing.</p>
+        <p>He is based in Norway and grew up in a small town on the Lofoten islands.</p>
         <p>Henning enjoys exploring new places and seeking adventures, both solo and with family and friends.</p>
         <p>This is just practice for my exam, haha :)</p>
         <p class="Contact"><b>Contact:</b> <a href="mailto:henning.unstad@gmail.com">henning.unstad@gmail.com</a></p>
