--- a/Lofoten.html
+++ b/Lofoten.html
@@ -20,7 +20,13 @@
     </ul>
 
     <main class="Galleri">
-        <img src="IMG_2455.jpg" alt="Solnedgang fra Landegode" class="Bilde">
+        <img src="IMG_2038.jpg" class="Bilde">
+        <img src="IMG_2130.jpg" class="Bilde">
+        <img src="IMG_2163.jpg" class="Bilde">
+        <img src="IMG_3570.jpg" class="Bilde">
+        <img src="IMG_3571.jpg" class="Bilde">
+
+        
 
 </body>
 
