--- a/Unstad.html
+++ b/Unstad.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Henning's Portfolio</title>
+    <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@325;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Henning_PortStyles.css">
 </head>
@@ -21,7 +21,7 @@
     </ul>
 
     <main class="Galleri">
-        <img src="IMG_2455.jpg" alt="Solnedgang fra Landegode" class="Bilde">
+        <img src="IMG_2455-2.jpg" alt="Solnedgang fra Landegode" class="Bilde">
         <img src="IMG_1145.jpg" alt="Skitur fra Trysil" class="Bilde">
         <img src="IMG_1690.jpg" alt="Bading i Lofoten" class="Bilde">
     </main>
