--- a/Adventures.html
+++ b/Adventures.html
@@ -4,17 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Henning's Portfolio</title>
+    <title>Adventures</title>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@325;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Henning_PortStyles.css">
 </head>
 
 <body>
-    <body>
-        <header>
-            <p class="Navnet"><a href="Unstad.html">Henning<br>Unstad</a></p>
-        </header>
-    
-<p> <br><br><br><br>This page is under construction <p>
+    <header>
+        <p class="Navnet"><a href="Unstad.html">Henning<br>Unstad</a></p>
+    </header>
 
-</body>
-</html>
+    <ul class="Meny">
+        <li><a href=Lofoten.html>Lofoten</a></li>
+        <li><a href=Adventures.html>Adventures</a></li>
+        <li><a href=About.html>About</a></li>
+    </ul>
+
+    <main class="Galleri">
+        <img src="IMG_3412.jpg" class="Bilde">
+        <img src="IMG_1437.jpg" class="Bilde">
+        <img src="IMG_0668.jpg" class="Bilde">
+        <img src="IMG_3260.jpg" class="Bilde">
+        <img src="IMG_3568.jpg" class="Bilde">
+        <img src="IMG_1443.jpg" class="Bilde">
+
+
+        <footer>
+            <p>&copy; 2024 Henning Unstad. All rights reserved<br>Made with love (and some sweat and frustration)</p>
+        </footer>
