Push final  version of website

--- a/Adventures.html
+++ b/Adventures.html
@@ -27,6 +27,9 @@
         <img src="IMG_3260.jpg" class="Bilde">
         <img src="IMG_3568.jpg" class="Bilde">
         <img src="IMG_1443.jpg" class="Bilde">
+        <img src="IMG_9302.jpg" class="Bilde">
+        <img src="IMG_8244.jpg" class="Bilde">
+        <img src="IMG_2562.jpg" class="Bilde">
 
 
         <footer>
