--- a/Lofoten.html
+++ b/Lofoten.html
@@ -22,9 +22,11 @@
     <main class="Galleri">
         <img src="IMG_2038.jpg" class="Bilde">
         <img src="IMG_2130.jpg" class="Bilde">
+        <img src="IMG_2445.jpg" class="Bilde">
+        <img src="IMG_3571-2.jpg" class="Bilde">
+        <img src="IMG_1980.jpg" class="Bilde">
+        <img src="IMG_4436.jpg" class="Bilde">
         <img src="IMG_2163.jpg" class="Bilde">
-        <img src="IMG_3570.jpg" class="Bilde">
-        <img src="IMG_3571.jpg" class="Bilde">
 
         
 
