--- a/Lofoten.html
+++ b/Lofoten.html
@@ -20,7 +20,7 @@
     </ul>
 
     <main class="Galleri">
-        <img src="IMG_2038.jpg" class="Bilde">
+        <img src="IMG_2038.jpg" class="Bilde" loading="eager">
         <img src="IMG_2130.jpg" class="Bilde">
         <img src="IMG_2445.jpg" class="Bilde">
         <img src="IMG_3571-2.jpg" class="Bilde">
