HTML cleanup, closing tags

--- a/Adventures.html
+++ b/Adventures.html
@@ -30,8 +30,11 @@
         <img src="IMG_9302.jpg" class="Bilde">
         <img src="IMG_8244.jpg" class="Bilde">
         <img src="IMG_2562.jpg" class="Bilde">
+    </main>
 
 
         <footer>
             <p>&copy; 2024 Henning Unstad. All rights reserved<br>Made with love (and some sweat and frustration)</p>
         </footer>
+</body>
+</html>
