--- a/Lofoten.html
+++ b/Lofoten.html
@@ -27,12 +27,10 @@
         <img src="IMG_1980.jpg" class="Bilde">
         <img src="IMG_4436.jpg" class="Bilde">
         <img src="IMG_2163.jpg" class="Bilde">
+    </main>
 
-        
-
+    <footer>
+        <p>&copy; 2024 Henning Unstad. All rights reserved<br>Made with love (and some sweat and frustration)</p>
+    </footer>
 </body>
-
-<footer>
-    <p>&copy; 2024 Henning Unstad. All rights reserved<br>Made with love (and some sweat and frustration)</p>
-</footer>
-
+</html>
