--- a/Unstad.html
+++ b/Unstad.html
@@ -21,7 +21,7 @@
     </ul>
 
     <main class="Galleri">
-        <img src="IMG_2455-2.jpg" class="Bilde" loading="eager">
+        <img src="IMG_2455-2.jpg" class="Bilde" loading="eager" fetchpriority="high">
         <img src="IMG_1145.jpg" class="Bilde">
         <img src="IMG_1690.jpg" class="Bilde">
     </main>
